--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -166,10 +166,28 @@ block.omaloon-pressure-source.name = Pressure Source
 block.omaloon-pressure-source.description = A source for both fluids and pressure.
 
 ## sectors
-sector.omaloon-crater-map.text1 = \
-  [#bbc7c9]Cobalt[] is an essential resource for most\
-  \nbuildings. grab a few to set up automatic\
-  \n[#bbc7c9]Cobalt[] mining.
+tc.cobalt = \
+  \uC350 [#bbc7c9]Cobalt[] is an important resource for most\
+  \nof the buildings here. Mine some of it to create\
+  \nbasic mining automation.
+
+tc.reshammer =\
+  Open the \uE875 tech tree \n and research the \uC351[accent] Hammer Drill[].
+
+tc.distributor-error1=\
+  The \uC352 [accent]Tube Distributor[]\
+  \nhas one side from which\
+  \nit does not accept items.
+
+tc.distributor-error2=\
+  In that case, this\
+  \n\uC351[accent] Hammer Drill[] won't\
+  \nbe able to drop items.
+
+tc.distributor-error3=\
+  So carefully check in which\
+  \ndirection the \uC352 [accent]Tube Distributor[]\
+  \nis facing.
 sector.omaloon-crater-map.text2 = \
   Now that there is enough Cobalt, [accent]Hammer\
   \nDrills[] can be built. These require negative\
