--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -129,8 +129,9 @@ block.omaloon-bush-tree.name = Bush Tree
 
 ## Hints
 hint.omaloon-drill = Drills work faster the less pressure that they have. But be careful to not implode them.
-hint.omaloon-pump = Pumps only stop when the front is solid. or the front has enough pressure.
+hint.omaloon-pump = Pumps only stop when the front is solid. or if the front has enough pressure.
 hint.omaloon-valve = The valve can maintain the pressure for 3 pumps.
+hint.omaloon-low_pressure = Buildings whose pressure reach -50 pressure units will implode quickly, to avoid that, place a \uC353 [accent]Liquid Valve[] connected to the building to avoid the system from imploding.
 
 ## items
 item.omaloon-carborundum.name = Carborundum
