--- a/assets/icons/omaloon-icons.properties
+++ b/assets/icons/omaloon-icons.properties
@@ -4,3 +4,5 @@
 50001=hammer-drill|omaloon-hammer-drill-icon
 #\uC352
 50002=tube-distributor|omaloon-tube-distributor-icon
+#\uC353
+50003=liquid-valve|omaloon-liquid-valve-icon
