--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -16,7 +16,7 @@ block.omaloon-carborundum-press.description = A pressurized machine that produce
 
 ## defense
 block.omaloon-repairer.name = Repairer
-block.omaloon-repairer.description = A repair projector that heals a small amount of both units and buildings.
+block.omaloon-repairer.description = A repair projector that heals a small number of both units and buildings.
 block.omaloon-small-shelter.name = Small Shelter
 block.omaloon-small-shelter.description = A shield against hazardous weather.
 
@@ -128,10 +128,10 @@ block.omaloon-spiked-tree.name = Spiked Tree
 block.omaloon-bush-tree.name = Bush Tree
 
 ## Hints
-hint.omaloon-drill = Drills work faster the less pressure that they have. But be careful to not implode them.
+hint.omaloon-drill = Drills work faster the lower pressure that they have. But be careful to not implode them.
 hint.omaloon-pump = Pumps only stop when the front is solid. or if the front has enough pressure.
+hint.omaloon-low_pressure = Buildings whose pressure reaches -50 pressure units will implode quickly, to avoid that, place a \uC354 [accent]Liquid Valve[] connected to the building to avoid the system from imploding.
 hint.omaloon-valve = The valve can maintain the pressure for 3 pumps.
-hint.omaloon-low_pressure = Buildings whose pressure reach -50 pressure units will implode quickly, to avoid that, place a \uC353 [accent]Liquid Valve[] connected to the building to avoid the system from imploding.
 
 ## items
 item.omaloon-carborundum.name = Carborundum
@@ -168,9 +168,9 @@ block.omaloon-pressure-source.description = A source for both fluids and pressur
 
 ## sectors
 tc.cobalt = \
-  \uC350 [#bbc7c9]Cobalt[] is an important resource for most\
+  \uC350 [#bbc7c9]Cobalt[] is a basic resource for most\
   \nof the buildings here. Mine some of it to create\
-  \nbasic mining automation.
+  \nfirst mining automation.
 
 tc.reshammer =\
   Open the \uE875 tech tree \n and research the \uC351[accent] Hammer Drill[].
@@ -186,34 +186,36 @@ tc.distributor-error2=\
   \nbe able to drop items.
 
 tc.distributor-error3=\
-  So carefully check in which\
-  \ndirection the \uC352 [accent]Tube Distributor[]\
+  So carefully check in which direction\
+  \nthe \uC352 [accent]Tube Distributor[]\
   \nis facing.
-sector.omaloon-crater-map.text2 = \
-  Now that there is enough Cobalt, [accent]Hammer\
-  \nDrills[] can be built. These require negative\
-  \npressure to function.
-sector.omaloon-crater-map.text3 = \
-  The pressure inside the drill needs to be\
-  \npumped out using a [accent]Pressure pump[]. Place\
-  \none facing away from a nearby [accent]Hammer Drill[].
-sector.omaloon-crater-map.text4 = \
-  More complex machinery requires [#92DD7E]Beryllium[].\
-  \nWhich can be found around the crater.
-sector.omaloon-crater-map.text5 = \
-  Hail often falls on this place, which can\
-  \nlead to damage to the factory. Build [accent]Shelters[].
-sector.omaloon-crater-map.text6 = \
-  This hailstorm will last just enough to\
-  \nmake some [#9983B8]Carborundum[]. it is made using a [accent]Carborundum\
-  \nPress[], which uses Beryllium and Cobalt in\
-  \na pressurized environment.
-sector.omaloon-crater-map.text7 = \
-  With your current resources, upgrade your\
-  \ncore to a [accent]Core Floe[] to be able to gather\
-  \nenough resources to launch to other sectors.
 
-objective.hail-warning = Massive hail storm approaching in [lightgray]{0}[]
+tc.pump=\
+  Research and place \uC353[accent] Liquid Pump[]\
+  \nfacing away from the hammer drill.\
+  \nThis will pump air out of all neighboring\
+  \ndrills, making them mine.
+
+tc.beryllium=\
+  \uF748 [#92DD7E] Beryllium [] is another\
+  \nmajor resource here, needed for\
+  \nmore complex structures.
+
+tc.shelter=\
+  It looks like a massive hailstorm is approaching.\
+  \nResearch the \uC355[accent] Small Shelter[]\
+  \nand cover all your buildings from the hail.
+
+tc.hail-timer=\
+  A massive hailstorm is approaching! Cover your buildings! [lightgray]{0}[]
+
+tc.press=\
+  While the hailstorm continues, make sure you cover\
+  \nall your buildings and then set up the\
+  \n\uC356[#8691b3] Carborundum[] production.
+
+tc.core=\
+It's time to leave this place. Upgrade your core.
 
 ## Sector
 sector.omaloon-crater.name = The Crater
