--- a/assets/icons/omaloon-icons.properties
+++ b/assets/icons/omaloon-icons.properties
@@ -5,4 +5,10 @@
 #\uC352
 50002=tube-distributor|omaloon-tube-distributor-icon
 #\uC353
-50003=liquid-valve|omaloon-liquid-valve-icon
+50003=liquid-pump|omaloon-liquid-pump-icon
+#\uC354
+50004=liquid-valve|omaloon-liquid-valve-icon
+#\uC355
+50005=small-shelter|omaloon-small-shelter-icon
+#\uC356
+50006=carborundum|omaloon-carborundum-icon
