--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -217,6 +217,12 @@ tc.press=\
 tc.core=\
 It's time to leave this place. Upgrade your core.
 
+rp.text=\
+  Next enemy group approaching! Research defenses\
+  \nand prepare your base for further attacks.
+
+rp.next-enemy-group=[lightgray]Next enemy group in {0}
+
 ## Sector
 sector.omaloon-crater.name = The Crater
 sector.omaloon-crater.description = The medium-sized equatorial crater left by one of the fragments of Set. A quiet and inconspicuous place, ideal for an initial landing. Explore the available resources and beware of dangerous weather caused by low temperatures.
