untested bundles and stats change

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -14,6 +14,9 @@ category.omaloon-pressure = Pressure
 block.omaloon-carborundum-press.name = Carborundum Press
 block.omaloon-carborundum-press.description = A pressurized machine that produces carborundum.
 
+block.omaloon-graphite-press.name = Graphite Press
+block.omaloon-graphite-press.description = A pressurized machine that produces graphite.
+
 ## defense
 block.omaloon-repairer.name = Repairer
 block.omaloon-repairer.description = A repair projector that heals a small number of both units and buildings.
@@ -270,6 +273,8 @@ techtree.omaloon-glasmore = Glasmore
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
 fragment.omaloon.cliff-placer = Cliff Placer
 place = Place
+bar.pressure = Pressure
+omaloon-source-negative = Negative
 ui.omaloon-process-cliffs = Process Cliffs
 ui.omaloon-un-process-cliffs = Reset Cliffs
 ui.omaloon-finished-campaign = \
