game data dialog

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -240,6 +240,9 @@ setting.omaloon-check-updates = Check Updates
 setting.omaloon-shield-opacity = Shield Opacity
 setting.omaloon-show-disclaimer = Show Disclaimer
 setting.omaloon-discord-join = Join the discord server :3
+settings.omaloon-moddata = Omaloon Data
+settings.omaloon-clearresearch-confirm = Are you sure you want to erase your current Omaloon campaign tech tree?
+settings.omaloon-clearcampaignsaves-confirm = Are you sure you want to erase your current Omaloon campaign saves?
 
 ## stats
 stat.omaloon-consumepressure = Consume Pressure
@@ -273,7 +276,8 @@ techtree.omaloon-glasmore = Glasmore
 fragment.omaloon.shaped-env-placer = Shaped Env Placer
 fragment.omaloon.cliff-placer = Cliff Placer
 place = Place
-bar.pressure = Pressure
+bar.pressure = Pressure: {0}
+bar.hail-shield-health = Hail Shield
 omaloon-source-negative = Negative
 ui.omaloon-process-cliffs = Process Cliffs
 ui.omaloon-un-process-cliffs = Reset Cliffs
