--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -241,6 +241,8 @@ setting.omaloon-shield-opacity = Shield Opacity
 setting.omaloon-show-disclaimer = Show Disclaimer
 setting.omaloon-discord-join = Join the discord server :3
 settings.omaloon-moddata = Omaloon Data
+settings.omaloon-resethints = Reset Hints
+settings.omaloon-resethints-confirm = Are you sure you want to reset your current Omaloon hints.
 settings.omaloon-clearresearch-confirm = Are you sure you want to erase your current Omaloon campaign tech tree?
 settings.omaloon-clearcampaignsaves-confirm = Are you sure you want to erase your current Omaloon campaign saves?
 
