basic bundle & pressure liquid bar

--- a/assets/icons/omaloon-icons.properties
+++ b/assets/icons/omaloon-icons.properties
@@ -12,3 +12,5 @@
 50005=small-shelter|omaloon-small-shelter-icon
 #\uC356
 50006=carborundum|omaloon-carborundum-icon
+#\uC357
+50007=pressure|omaloon-pressure-icon
