--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -31,7 +31,7 @@ ui.omaloon-exit-dialog.mobile = [gray]Tap to exit
 ## settings
 settings.omaloon = Omaloon Settings
 setting.omaloon-check-updates = Check for Updates
-setting.omaloon-shield-opacity = Shield Opacity
+setting.omaloon-shield-opacity = Shelter Opacity
 setting.omaloon-show-disclaimer = Hide Disclaimer
 setting.omaloon-discord-join = Join Omaloon discord server!
 
@@ -132,16 +132,15 @@ block.omaloon-cliff-helper.name = Cliff Helper
 
 block.omaloon-deep-glacium.name = Deep Glacium
 block.omaloon-grenite-glacium.name = Grenite Glacium
-block.omaloon-shallow-glacium.name = Shallow Glacium
+block.omaloon-shallow-glacium.name = Glacium
 
 block.omaloon-dead-grass.name = Dead Grass
 block.omaloon-dead-shrub.name = Dead Shrub
-block.omaloon-dead-thickets.name = Dead Thickets
 
 block.omaloon-fallen-dead-tree.name = Fallen Dead Tree
 block.omaloon-fallen-dead-tree-bottom-half.name = Fallen Dead Tree Bottom Half
 block.omaloon-fallen-dead-tree-top-half.name = Fallen Dead Tree Top Half
-block.omaloon-standing-dead-tree.name = Standing Dead Tree
+block.omaloon-standing-dead-tree.name = Dead Tree
 block.omaloon-dead-tree-stump.name = Dead Stump
 block.omaloon-spiked-tree.name = Dead Spiked Tree
 block.omaloon-bush-tree.name = Dead Bush Tree
@@ -170,7 +169,6 @@ block.omaloon-coastal-aghanite.name = Coastal Aghanite
 block.omaloon-cobalted-aghanite.name = Cobalted Aghanite
 block.omaloon-cobalted-aghanite-stones.name = Cobalted Aghanite Stones
 block.omaloon-cobalted-aghanite-wall.name = Cobalted Aghanite Wall
-block.omaloon-cracked-aghanite.name = Cracked Aghanite
 block.omaloon-weathered-aghanite.name = Weathered Aghanite
 block.omaloon-weathered-aghanite-boulder.name = Weathered Aghanite Boulder
 block.omaloon-weathered-aghanite-wall.name = Weathered Aghanite Wall
@@ -183,7 +181,7 @@ block.omaloon-dark-grenite-wall.name = Dark Grenite Wall
 block.omaloon-coastal-grenite.name = Coastal Grenite
 block.omaloon-grenite.name = Grenite
 block.omaloon-grenite-boulder.name = Grenite Boulder
-block.omaloon-grenite-wall.name = Grenite
+block.omaloon-grenite-wall.name = Grenite Wall
 
 block.omaloon-blue-boulder.name = Blue Boulder
 block.omaloon-blue-ice.name = Blue Ice
@@ -196,7 +194,7 @@ block.omaloon-weathered-ice.name = Weathered Ice
 
 ## weather
 weather.omaloon-hail-storm.name = Hail Storm
-weather.omaloon-aghanite-storm.name = Aghanite Storm
+weather.omaloon-aghanite-storm.name = Dust Storm
 weather.omaloon-wind.name = Wind
 
 ## items
@@ -262,7 +260,7 @@ block.omaloon-liquid-valve.description = Equalizes fluid systems pressure to -15
 block.omaloon-liquid-bridge.name = Liquid Bridge
 block.omaloon-liquid-bridge.description = Transports liquids over terrain or buildings.
 
-block.omaloon-pressure-source.name = Pressure Source
+block.omaloon-pressure-source.name = Pressure Liquid Source
 block.omaloon-pressure-source.description = Infinitely outputs liquids at the set pressure.
 
 ## crafting
@@ -318,7 +316,7 @@ stat.omaloon-maxpressure = Max Pressure
 stat.omaloon-max-speed = Max Speed
 stat.omaloon-min-speed = Min Speed
 stat.omaloon-outputpressure = Output Pressure
-stat.omaloon-pressureflow = Pressure Flow
+stat.omaloon-pressureflow = Speed
 stat.omaloon-pressurerange = Operating Range
 stat.omaloon-pressurerange.format = from \uC357 @ pressure units to \uC357 @ pressure units.
 
