more hints for ~~dumbs~~

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -48,7 +48,10 @@ settings.omaloon-clearcampaignsaves-confirm = Are you sure you want to erase you
 requirement.omaloon-at-wave = Reach Wave {0} in {1}
 
 ## Hints
-hint.omaloon-drill = The lower the pressure, the faster the drills will work. But be careful not to cause implosion.
+hint.omaloon-pump_positive = To create higher pressure, place \uC353[accent] mechanical pumps[] in series, adding liquid pipes between them.\nTo increase pressure faster, place \uC353[accent] mechanical pumps[] in parallel.
+hint.omaloon-pump_negative = To decrease pressure faster, add more \uC353[accent]mechanical pumps[].
+hint.omaloon-drill_positive_pressure = \uC351 [accent]Hammer drills[] require negative pressure to operate. Rotate the \uC353[accent] mechanical pumps[] away from the drills to create negative pressure.
+hint.omaloon-press_or_shelter_negative_pressure = Some buildings require positive pressure. Rotate the \uC353[accent] mechanical pumps[] to these blocks to create positive pressure.
 hint.omaloon-pump = The pumps only stop when there is a block in front of it or the front block has enough pressure.
 hint.omaloon-low_pressure = Buildings will implode when it reaches -50 pressure units. To avoid this, use \uC354 [accent]Liquid Valve[], which will reduce the pressure, preventing it from reaching dangerous levels.
 hint.omaloon-valve = One valve can handle up to three pumps. If you have more pumps, place more valves to avoid jamming.
