--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -34,6 +34,7 @@ setting.omaloon-check-updates = Check for Updates
 setting.omaloon-shield-opacity = Shelter Opacity
 setting.omaloon-show-disclaimer = Hide Disclaimer
 setting.omaloon-discord-join = Join Omaloon discord server!
+settings.omaloon-enable-roomba = Enable Roomba
 
 settings.omaloon-moddata = Omaloon Data
 binding.category-omaloon-editor = Editor
