After Update Clean

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -11,7 +11,17 @@ dialog.omaloon-updater = \
   Most likely, Omaloon got a content update or a bug fix. It's recommended to install the update.\
   \n[red]All your Omaloon-enabled saves will be erased after updating![]\
   \n\n[gray]The current Omaloon version is v{0}, but the latest one is v{1}.[]
-button.omaloon-update-later = Ignore
+
+dialog.omaloon-update-cleanup.title = Omaloon has been updated!
+dialog.omaloon-update-cleanup.text = \
+  Omaloon has been updated from [accent]v{0}[] to [accent]v{1}[]!\n\
+  \nWe recommend performing a full cleanup of your Omaloon campaign and research for the best experience and to avoid broken saves.\
+  \nAlternatively, you can enable Safe Cleaner, which will remove not allowed content and researches while keeping your progress intact.\
+  \n\n[scarlet]Ignoring this may result in significant issues in your saves and gameplay experience.[]
+
+button.omaloon-ignore = Ignore
+button.omaloon-update-cleanup.softclean = Enable Soft Cleaner
+button.omaloon-update-cleanup.fullclean = Full Cleanup
 button.omaloon-updater-show-changes = Change List
 button.omaloon-install-update = Install it and restart now?
 
@@ -34,7 +44,8 @@ setting.omaloon-check-updates = Check for Updates
 setting.omaloon-shield-opacity = Shelter Opacity
 setting.omaloon-show-disclaimer = Hide Disclaimer
 setting.omaloon-discord-join = Join Omaloon discord server!
-settings.omaloon-enable-roomba = Enable Roomba
+setting.omaloon-enable-soft-cleaner.name = Enable Safe Cleaner
+setting.omaloon-enable-soft-cleaner.description = Cleans your campaign from not allowed content and research.
 
 settings.omaloon-moddata = Omaloon Data
 binding.category-omaloon-editor = Editor
