--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -16,7 +16,7 @@ dialog.omaloon-update-cleanup.title = Omaloon has been updated!
 dialog.omaloon-update-cleanup.text = \
   Omaloon has been updated from [accent]v{0}[] to [accent]v{1}[]!\n\
   \nWe recommend performing a full cleanup of your Omaloon campaign and research for the best experience and to avoid broken saves.\
-  \nAlternatively, you can enable Safe Cleaner, which will remove not allowed content and researches while keeping your progress intact.\
+  \nAlternatively, you can enable Safe Cleaner, which will remove not allowed content and researches while keeping your progress intact, but you may still encounter corrupted saves.\
   \n\n[scarlet]Ignoring this may result in significant issues in your saves and gameplay experience.[]
 
 button.omaloon-ignore = Ignore
