--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -55,6 +55,7 @@ settings.omaloon-resethints = Reset Hints
 settings.omaloon-resethints-confirm = Are you sure you want to reset your current Omaloon hints?
 settings.omaloon-clearresearch-confirm = Are you sure you want to erase your current Omaloon campaign tech tree?
 settings.omaloon-clearcampaignsaves-confirm = Are you sure you want to erase your current Omaloon campaign saves?
+omaloon.update.dialog.fullclean.confirm = Are you sure you want to reset your current Omaloon campaign?
 
 ## objectives
 requirement.omaloon-at-wave = Reach Wave {0} in {1}
