changed the bar

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -339,8 +339,8 @@ stat.omaloon-pressurerange.format = from \uC357 @ pressure units to \uC357 @ pre
 ## ui units
 unit.omaloon-pressuresecond = pressure units / second
 unit.omaloon-pressureunits = pressure units
-bar.air = Air
-bar.pressure-liquid = {0} (\uC357 {1}/{2})
+bar.air = Air: 
+bar.pressure-liquid = ({0}: {1} / Air: {2})
 bar.hail-shield-health = Individual Shelter
 omaloon-source-negative = Negative
 
