not fully tested gauger

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -273,6 +273,9 @@ block.omaloon-liquid-junction.description = Acts as a bridge for two crossing li
 block.omaloon-liquid-valve.name = Liquid Valve
 block.omaloon-liquid-valve.description = Equalizes fluid systems pressure to -15 pressure units. Jams when the pressure decreases too fast.
 
+block.omaloon-liquid-gauge.name = Liquid Gauge
+block.omaloon-liquid-gauge.description = Displays the amount of pressure inside it.
+
 block.omaloon-liquid-bridge.name = Liquid Bridge
 block.omaloon-liquid-bridge.description = Transports liquids over terrain or buildings.
 
@@ -340,6 +343,7 @@ stat.omaloon-pressurerange.format = from \uC357 @ pressure units to \uC357 @ pre
 unit.omaloon-pressuresecond = pressure units / second
 unit.omaloon-pressureunits = pressure units
 bar.air = Air: 
+bar.pressure = Pressure: 
 bar.pressure-liquid = ({0}: {1} / Air: {2})
 bar.hail-shield-health = Individual Shelter
 omaloon-source-negative = Negative
