--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -327,6 +327,9 @@ block.omaloon-impulse-node.description = Transmits power to connected buildings.
 block.omaloon-hammer-drill.name = Hammer drill
 block.omaloon-hammer-drill.description = When placed on ore, outputs items. Efficiency increases with decreasing pressure inside, reaching peak performance in near vacuum conditions.
 
+block.omaloon-air-well.name = Air Well
+block.omaloon-air-well.description = Constantly pulls air in or out.
+
 ## stats
 category.omaloon-pressure = Pressure
 stat.omaloon-consumepressure = Consume Pressure
