--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -341,6 +341,8 @@ stat.omaloon-outputpressure = Output Pressure
 stat.omaloon-pressureflow = Speed
 stat.omaloon-pressurerange = Operating Range
 stat.omaloon-pressurerange.format = from \uC357 @ pressure units to \uC357 @ pressure units.
+stat.omaloon-optimal-pressure = Optimal Pressure
+stat.omaloon-optimal-pressure.format = \uC357 @ pressure units (@%)
 
 ## ui units
 unit.omaloon-pressuresecond = pressure units / second
